# open-sentinel

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo.py  open-sentinel-spec.md  pyproject.toml
open_sentinel/: __init__.py  agent.py  cli.py  dedup.py  events.py  feedback.py  guardrails.py  hooks.py  interfaces.py  memory.py  priority.py  reflection.py  registry.py  resources.py  scheduler.py  time_utils.py  types.py
open_sentinel/adapters/: __init__.py  csv_adapter.py  fhir_git.py  sqlite_adapter.py
open_sentinel/llm/: __init__.py  mock.py  ollama.py  openai_engine.py
open_sentinel/outputs/: __init__.py  console.py  email_output.py  fhir_flag.py  file_output.py  sms.py  webhook.py
open_sentinel/skills/: clinical_base.py  idsr_base.py
open_sentinel/testing/: __init__.py  fixtures.py  harness.py  mock_llm.py
scripts/: demo.py
skills/idsr-cholera/: SKILL.md  skill.py
skills/idsr-ebola/: SKILL.md  skill.py
skills/idsr-measles/: SKILL.md  skill.py
skills/idsr-meningitis/: SKILL.md  (+1 more)
tests/: test_agent.py  test_agent_exceptions.py  test_clinical_skills.py  test_csv_adapter.py  test_dedup.py  test_email_output.py  test_events.py  test_feedback.py  test_fhir_flag_output.py  test_fhir_git_adapter.py  test_file_output.py  test_guardrails.py  test_harness.py  test_hooks.py  test_idsr_skills.py  test_load_skill_directory.py  test_memory.py  test_openai_engine.py  test_priority.py  test_reflection.py  test_registry.py  test_resources.py  test_scheduler.py  test_sms_output.py  test_sqlite_adapter.py  test_time_utils.py  test_types.py  test_webhook_output.py
(+18 files in other folders)
