[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-sentinel"
version = "0.1.0"
description = "LLM-powered sleeper agent for passive clinical surveillance"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "croniter>=2.0",
    "aiosmtplib>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
openai = ["openai>=1.0", "python-dotenv>=1.0"]

[project.scripts]
sentinel = "open_sentinel.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
